// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/Input Critical Input 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-15"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field is-hover"
        id="field-16"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field is-active"
        id="field-17"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field is-focus"
        id="field-18"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field"
        disabled=""
        id="field-19"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        readonly
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-20"
        placeholder="Placeholder"
        readonly=""
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        display
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--critical"
    >
      
        
      <input
        class="fn-input__text-field is-display"
        id="field-21"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--alert"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Input Default Input 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-1"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field is-hover"
        id="field-2"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field is-active"
        id="field-3"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field is-focus"
        id="field-4"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field"
        disabled=""
        id="field-5"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        readonly
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-6"
        placeholder="Placeholder"
        readonly=""
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        display
      </b>
    </div>
    
    
    <div
      class="fn-input"
    >
      
        
      <input
        class="fn-input__text-field is-display"
        id="field-7"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Input Info Input 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-8"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field is-hover"
        id="field-9"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field is-active"
        id="field-10"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field is-focus"
        id="field-11"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field"
        disabled=""
        id="field-12"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        readonly
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-13"
        placeholder="Placeholder"
        readonly=""
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        display
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--info"
    >
      
        
      <input
        class="fn-input__text-field is-display"
        id="field-14"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--information"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Input Negative Input 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-22"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field is-hover"
        id="field-23"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field is-active"
        id="field-24"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field is-focus"
        id="field-25"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field"
        disabled=""
        id="field-26"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        readonly
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-27"
        placeholder="Placeholder"
        readonly=""
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        display
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--negative"
    >
      
        
      <input
        class="fn-input__text-field is-display"
        id="field-28"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--error"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Input Positive Input 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-29"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field is-hover"
        id="field-30"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field is-active"
        id="field-31"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field is-focus"
        id="field-32"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field"
        disabled=""
        id="field-33"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        readonly
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field"
        id="field-34"
        placeholder="Placeholder"
        readonly=""
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        display
      </b>
    </div>
    
    
    <div
      class="fn-input fn-input--positive"
    >
      
        
      <input
        class="fn-input__text-field is-display"
        id="field-35"
        placeholder="Placeholder"
        type="text"
      />
      
        
      <div
        class="fn-input__border"
      />
      
        
      <span
        class="sap-icon sap-icon--sys-enter-2"
      />
      
    
    </div>
    

  </div>
  

</section>
`;
